--- a/iOS/zurich/zurich-Info.plist
+++ b/iOS/zurich/zurich-Info.plist
@@ -21,6 +21,25 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>icon-120</string>
+				<string>icon.png</string>
+				<string>icon@2x.png</string>
+				<string>icon-144.png</string>
+				<string>icon-72.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon-152</string>
+				<string>icon-76</string>
+				<string>icon-120</string>
 				<string>icon.png</string>
 				<string>icon@2x.png</string>
 				<string>icon-144.png</string>
