--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
-iOS/zurich.xcodeproj/project.xcworkspace/xcuserdata/*
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
+
+# Android
 android/bin
 android/gen
+
+# FMS
 www/js/config.js
 compiled/*.html
 compiled/*.js
