--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
             "cordova-plugin-dialogs": {},
             "cordova-plugin-file": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-geolocation": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            },
             "cordova-plugin-globalization": {},
             "cordova-plugin-media": {},
             "cordova-plugin-network-information": {},
@@ -34,27 +36,27 @@
         }
     },
     "dependencies": {
-        "cordova-android": "~5.1.1",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-battery-status": "~1.1.1",
-        "cordova-plugin-camera": "~2.1.1",
+        "cordova-plugin-battery-status": "^1.1.2",
+        "cordova-plugin-camera": "^2.1.1",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "~1.0.2",
-        "cordova-plugin-contacts": "~2.0.1",
-        "cordova-plugin-device": "~1.1.1",
-        "cordova-plugin-device-motion": "~1.2.0",
-        "cordova-plugin-device-orientation": "~1.0.2",
-        "cordova-plugin-dialogs": "~1.2.0",
-        "cordova-plugin-file": "~4.1.1",
-        "cordova-plugin-file-transfer": "~1.5.0",
-        "cordova-plugin-geolocation": "~2.4.0",
-        "cordova-plugin-globalization": "~1.0.3",
-        "cordova-plugin-media": "~2.2.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-contacts": "^2.0.1",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-device-motion": "^1.2.5",
+        "cordova-plugin-device-orientation": "^1.0.7",
+        "cordova-plugin-dialogs": "^1.2.1",
+        "cordova-plugin-file": "^4.1.1",
+        "cordova-plugin-file-transfer": "^1.5.1",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-globalization": "^1.0.7",
+        "cordova-plugin-media": "^2.2.0",
         "cordova-plugin-media-capture": "^1.4.3",
-        "cordova-plugin-network-information": "~1.2.0",
-        "cordova-plugin-splashscreen": "~3.2.1",
-        "cordova-plugin-statusbar": "~2.1.2",
-        "cordova-plugin-whitelist": "~1.2.1",
+        "cordova-plugin-network-information": "^1.2.1",
+        "cordova-plugin-splashscreen": "^3.2.2",
+        "cordova-plugin-statusbar": "^2.1.3",
+        "cordova-plugin-whitelist": "^1.2.2",
         "ionic-plugin-keyboard": "^2.1.0"
     }
 }
