--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
-      "cordova-plugin-console": {},
       "cordova-plugin-contacts": {},
-      "cordova-plugin-device": {},
       "cordova-plugin-device-motion": {},
       "cordova-plugin-device-orientation": {},
       "cordova-plugin-dialogs": {},
@@ -23,7 +21,6 @@
       "cordova-plugin-globalization": {},
       "cordova-plugin-media": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
@@ -35,18 +32,19 @@
       "cordova-plugin-camera": {
         "CAMERA_USAGE_DESCRIPTION": "Neues Foto machen",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "Foto hochladen"
-      }
+      },
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-device": {}
     }
   },
   "dependencies": {
     "cordova-android": "^6.2.3",
-    "cordova-ios": "^4.4.0",
+    "cordova-ios": "^4.5.4",
     "cordova-plugin-battery-status": "^1.1.2",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.7",
     "cordova-plugin-contacts": "^2.0.1",
-    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-device-motion": "^1.2.5",
     "cordova-plugin-device-orientation": "^1.0.7",
     "cordova-plugin-dialogs": "^1.2.1",
@@ -57,7 +55,7 @@
     "cordova-plugin-media": "^2.2.0",
     "cordova-plugin-media-capture": "^1.4.3",
     "cordova-plugin-network-information": "^1.2.1",
-    "cordova-plugin-splashscreen": "^3.2.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.1.3",
     "cordova-plugin-whitelist": "^1.2.2",
     "ionic-plugin-keyboard": "^2.1.0"
