--- a/package.json
+++ b/package.json
@@ -4,60 +4,54 @@
   "displayName": "Zuri Wie Neu",
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-compat": {},
       "cordova-plugin-contacts": {},
+      "cordova-plugin-device": {},
       "cordova-plugin-device-motion": {},
       "cordova-plugin-device-orientation": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-geolocation": {
-        "GEOLOCATION_USAGE_DESCRIPTION": "Erstellen Sie genau positionierte Berichte."
-      },
+      "cordova-plugin-geolocation": {},
       "cordova-plugin-globalization": {},
-      "cordova-plugin-media": {},
+      "cordova-plugin-media": {
+        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+      },
+      "cordova-plugin-media-capture": {},
       "cordova-plugin-network-information": {},
+      "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-media-capture": {
-        "CAMERA_USAGE_DESCRIPTION": "Neues Foto machen",
-        "MICROPHONE_USAGE_DESCRIPTION": " ",
-        "PHOTOLIBRARY_USAGE_DESCRIPTION": "Foto hochladen"
-      },
-      "cordova-plugin-camera": {
-        "CAMERA_USAGE_DESCRIPTION": "Neues Foto machen",
-        "PHOTOLIBRARY_USAGE_DESCRIPTION": "Foto hochladen"
-      },
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-device": {}
+      "ionic-plugin-keyboard": {}
     }
   },
   "dependencies": {
-    "cordova-android": "^6.2.3",
+    "cordova-android": "^7.0.0",
     "cordova-ios": "^4.5.4",
-    "cordova-plugin-battery-status": "^1.1.2",
-    "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-contacts": "^2.0.1",
-    "cordova-plugin-device": "^2.0.1",
-    "cordova-plugin-device-motion": "^1.2.5",
-    "cordova-plugin-device-orientation": "^1.0.7",
-    "cordova-plugin-dialogs": "^1.2.1",
-    "cordova-plugin-file": "^4.1.1",
-    "cordova-plugin-file-transfer": "^1.5.1",
-    "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-globalization": "^1.0.7",
-    "cordova-plugin-media": "^2.2.0",
-    "cordova-plugin-media-capture": "^1.4.3",
-    "cordova-plugin-network-information": "^1.2.1",
+    "cordova-plugin-battery-status": "^2.0.2",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-contacts": "^3.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-device-orientation": "^2.0.1",
+    "cordova-plugin-dialogs": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-globalization": "^1.11.0",
+    "cordova-plugin-media": "^5.0.2",
+    "cordova-plugin-media-capture": "^3.0.2",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.1.3",
-    "cordova-plugin-whitelist": "^1.2.2",
-    "ionic-plugin-keyboard": "^2.1.0"
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic-plugin-keyboard": "^2.2.1"
   }
 }
