--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "displayName": "Züri Wie Neu",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "cordova-android": "^7.1.4",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "^5.0.1",
     "cordova-plugin-battery-status": "^2.0.2",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
