--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "displayName": "Züri Wie Neu",
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -32,8 +32,8 @@
     }
   },
   "dependencies": {
-    "cordova-android": "^7.1.4",
-    "cordova-ios": "^5.0.1",
+    "cordova-android": "^8.1.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-battery-status": "^2.0.2",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
