--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "displayName": "Züri Wie Neu",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -17,7 +17,6 @@
       "cordova-plugin-device-orientation": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {},
       "cordova-plugin-geolocation": {},
       "cordova-plugin-globalization": {},
       "cordova-plugin-media": {
@@ -28,12 +27,13 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-wkwebviewxhrfix": {}
     }
   },
   "dependencies": {
     "cordova-android": "^8.1.0",
-    "cordova-ios": "^5.1.1",
     "cordova-plugin-battery-status": "^2.0.2",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
@@ -43,7 +43,6 @@
     "cordova-plugin-device-orientation": "^2.0.1",
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-media": "^5.0.2",
@@ -53,5 +52,10 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-plugin-keyboard": "^2.2.1"
+  },
+  "devDependencies": {
+    "@ahovakimyan/cordova-plugin-wkwebviewxhrfix": "github:AraHovakimyan/cordova-plugin-wkwebviewxhrfix",
+    "cordova-ios": "^6.2.0",
+    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer#master"
   }
 }
