--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ch.zueriwieneu.zueriwieneu",
-  "version": "1.3.9",
+  "version": "1.3.11",
   "displayName": "Züri Wie Neu",
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-battery-status": {},
@@ -30,8 +31,8 @@
       "cordova-plugin-statusbar": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-wkwebviewxhrfix": {},
-      "cordova-plugin-exclude-files": {}
+      "cordova-plugin-exclude-files": {},
+      "@ahovakimyan/cordova-plugin-wkwebviewxhrfix": {}
     }
   },
   "dependencies": {
@@ -54,9 +55,9 @@
   },
   "devDependencies": {
     "@ahovakimyan/cordova-plugin-wkwebviewxhrfix": "github:AraHovakimyan/cordova-plugin-wkwebviewxhrfix",
-    "cordova-android": "^13.0.0",
+    "cordova-android": "^14.0.1",
+    "cordova-ios": "^7.1.1",
     "cordova-plugin-exclude-files": "^1.0.1",
-    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer#master",
-    "cordova-plugin-wkwebviewxhrfix": "^0.1.0"
+    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer#master"
   }
 }
